[package]
name = "enzo"
version = "0.1.0"
authors = ["Elton <eltonp3103@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
ansi_term = "0.12.1"
read_input = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

